CHANGES for LIRE
================

2013-05-11
==========
  - Optimization in GenericImageSearcher
  - Optimizations in FCTH, CEDD and JCD Tanimoto coefficient implementations
  - Added "-n" option to ParallelExtractor

2013-05-10
==========
  - Bug fix in ParallelExtractor (tnx to M. Riegler)
  - Bug fix in CEDD, FCTH and JCD serialization (tnx to M. Riegler)

2013-05-07
==========
  - Bug fix in Canny Edge Detector
  - Bug fix in PHOG

2013-05-04
==========
  - Bug fix in Indexor: Did not close IndexWriter.
  - Bug fix in BitSampling: Did not read Floats in alternative method.
  - Added ParallelExtractor, Producer/Consumer based extraction utility.

2013-04-26
==========
  - Updated FCTH serialization. Now uses 96 bytes instead of 768 bytes.
    Also cut the trailing 0's in the byte serialization, which comes down to
    another 41,8% space saved on the ferrari data set.
  - Also cut trailing zeros for JCD, ~ 5% save for ferrari data set.
  - Also cut trailing zeros for CEDD, ~ 7.2% save for ferrari data set.
  - Changed ParallelIndexer to appending to an index instead or overwriting.
  - Moved interval for monitoring to field in ParallelIndexer.
  - LireDemo: Updated to ParallelIndexer

2013-04-24
==========
  - Fixed FCTH distance function bug.
  - Removed unnecessary status line form ParallelIndexer

2013-04-21
==========
  - Removed GenericFastDocumentBuilder, it is completely replaced by GenericDocumentBuilder.
  - Update net.semanticmetadata.lire.impl.SurfDocumentBuilder
  - Updated DocumentBuilder interface to allow for creation of Fields without Document
  - Updated ChainedDocumentBuilder to save Space (less "new" operators).
  - Fixed bug in BitSamplingImageSearcher.

2013-04-20
==========
  - Changed internal file handling of ParallelIndexer
  - Clean-up in EdgeHistogramImplementation
  - Made footprint of EdgeHistogram smaller (40 bytes compared to 320 bytes)
  - Made footprint of JCD smaller (84 bytes instead of 1344 bytes)